--- a/src/main/webapp/sellerService.html
+++ b/src/main/webapp/sellerService.html
@@ -16,12 +16,10 @@
         if ('WebSocket' in window) {
             //Websocket的连接
             webSocket = new WebSocket("ws://localhost:8080/webSocket");//WebSocket对应的地址
-        }
-        else if ('MozWebSocket' in window) {
+        } else if ('MozWebSocket' in window) {
             //Websocket的连接
             webSocket = new MozWebSocket("ws://localhost:8080/webSocket");//SockJS对应的地址
-        }
-        else {
+        } else {
             //SockJS的连接
             webSocket = new SockJS("ws://localhost:8080/webSocket");    //SockJS对应的地址
         }
@@ -37,6 +35,9 @@
             console.log(response.data);
             var msg = $.parseJSON(response.data);
             addChatListFromServer(msg);
+            //添加图标提示
+            //添加提示音
+            new Audio("static/music/system.mp3").play(); //声音文件地址，支持mp3 或者 ogg
         }
 
         function onError() {
@@ -56,10 +57,10 @@
                     <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px;">userId</h3>
                 </li>
                 <li onclick="li_click(this)" style="padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;">
-                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px;">userId</h3>
+                    <h3><img src="static/images/head.jpg" style="width: 30px; height: 30px;">userId</h3>
                 </li>
                 <li onclick="li_click(this)" style="padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;">
-                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px;">userId</h3>
+                    <h3><img src="static/images/xiaomi3.jpg" style="width: 30px; height: 30px;">userId</h3>
                 </li>
             </ul>
         </div>
@@ -72,16 +73,40 @@
         </div>
         <hr>
         <!--显示对话的面板-->
-        <div id="show" style="width: 100%; height: 350px;margin: 0 auto; overflow: auto">
-            <ul id="content_list" style="padding: 0 100px">
-                <li style="float: left; color: red; font-size: 30px">
-                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px;">userId</h3>
-                </li>
-                <br>
-                <li style="float: right">
-                    <h3>userId<img src="static/images/logo-dark.png" style="width: 30px; height: 30px;"></h3>
-                </li>
-            </ul>
+        <div id="show" style="width: 100%; height: 350px;overflow: auto">
+            <div id="content_list" style="padding: 0 50px">
+                <div style="text-align:left; margin-bottom: 10px">
+                    <div style="float: left">
+                        <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">
+                    </div>
+                    <div style="text-align: left; max-width: 40%; padding-left: 50px">
+                        <h3>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h3>
+                    </div>
+                </div>
+                <div style="text-align:right; margin-bottom: 10px">
+                    <div style="float: right">
+                        <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-left: 20px">
+                    </div>
+                    <div style="text-align: right">
+                        <h3>userId</h3>
+                    </div>
+                </div>
+                <div style="text-align:left; margin-bottom: 10px">
+                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">userId</h3>
+                </div>
+                <div style="text-align:left; margin-bottom: 10px">
+                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">userId</h3>
+                </div>
+                <div style="text-align:right; margin-bottom: 10px">
+                    <h3>userId<img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-left: 20px"></h3>
+                </div>
+                <div style="text-align:left; margin-bottom: 10px">
+                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">userId</h3>
+                </div>
+                <div style="text-align:right; margin-bottom: 10px">
+                    <h3>userId<img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-left: 20px"></h3>
+                </div>
+            </div>
         </div>
         <hr>
         <!--文本输入框-->
@@ -110,54 +135,30 @@
             title: '在线客服',
             maxmin: true,
             shadeClose: false,
-            area: ['60%', '75%'],
+            area: ['60%', '80%'],
             content: 'sellerService.html'
         });
     });
+
     /*
-     * 获取对话列表
+     * 初始时获取目标对象的信息
      */
-    $.ajax({
-        url: '/socket/chat_list',
-        type: 'get',
-        success: function (result) {
-            var data = result.data;
-            var ul = $('#talk_list');
-            for (var i in data) {
-                var img = $("<img>");
-                img.attr("style", "padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;");
-                img.attr("src", data[i].path);
-                var content = $("<h3>");
-                content.append(img);
-                content.append(data[i].userId);
-                var li = $("<li>");
-                li.attr("onclick", "li_click(this)");
-                ul.append(li);
-                photoMap[data[i].userId] = img;
-            }
-        },
-        error: function () {
-//            alert('数据请求异常')
-        }
-    });
+//    $.get('/target', {}, function (result) {
+//
+//    });
 
     /*
      * 获取个人信息
      */
-    $.ajax({
-        url: '',
-        type: 'get',
-        success: function (result) {
+    $.get('/user', {}, function (result) {
             var img = $('<img>');
-            img.attr("src", result.data.path);
+            img.attr("src", result.data.uIcon);
             img.attr("style", "width: 30px; height: 30px;");
             var myInfo = $('#myInfo');
             myInfo.append(img);
-            myInfo.append(result.data.name);
+            myInfo.append(result.data.uUserName);
             myPhoto = img;
-        },
-        error: function () {
         }
-    })
+    )
 </script>
 </html>
