--- a/src/main/webapp/sellerService.html
+++ b/src/main/webapp/sellerService.html
@@ -6,45 +6,45 @@
     <link href="static/wt/css/webSocket.css" rel="stylesheet">
     <link rel="stylesheet" href="static/wt/css/master.css">
     <link rel="stylesheet" href="static/layui/css/layui.css" media="all">
-    <script src="static/jq/jquery-2.1.4.min.js" type="text/javascript"></script>
-    <script src="static/jq/webSocket/sock_js.js" type="text/javascript"></script>
-    <script src="static/jq/webSocket/stomp.js" type="text/javascript"></script>
-    <script src="static/jq/webSocket/update.js" type="text/javascript"></script>
-    <script src="static/js/cacheMap.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        var webSocket = null;
-        if ('WebSocket' in window) {
-            //Websocket的连接
-            webSocket = new WebSocket("ws://localhost:8080/webSocket");//WebSocket对应的地址
-        } else if ('MozWebSocket' in window) {
-            //Websocket的连接
-            webSocket = new MozWebSocket("ws://localhost:8080/webSocket");//SockJS对应的地址
-        } else {
-            //SockJS的连接
-            webSocket = new SockJS("ws://localhost:8080/webSocket");    //SockJS对应的地址
+    <style>
+        .left_font {
+            text-align: left;
+            max-width: 40%;
+            background-color: #EAEAEA;
+            word-break: break-all;
+            padding: 10px;
+            width:auto;
+            display:inline-block !important;
         }
-        webSocket.onmessage = onMessage;
-        webSocket.onerror = onError;
-        webSocket.onopen = onOpen();
-
-        function onOpen() {
-            console.log('webSocket链接打开')
+        .right_font {
+            float: right;
+            text-align: left;
+            min-width: 0;
+            word-break: break-all;
+            background-color: #E0FFFF;
+            padding: 10px
         }
 
-        function onMessage(response) {
-            console.log(response.data);
-            var msg = $.parseJSON(response.data);
-            addChatListFromServer(msg);
-            //添加图标提示
-            //添加提示音
-            new Audio("static/music/system.mp3").play(); //声音文件地址，支持mp3 或者 ogg
+        .left_div {
+            text-align: left;
+            font-size: 15px;
+            width: 100%;
+            overflow:hidden;
+            position:relative;
+            margin-bottom: 10px;
         }
 
-        function onError() {
+        .right_div {
+            text-align: right;
+            font-size: 15px;
+            width: 100%;
+            overflow:hidden;
+            position:relative;
+            margin-bottom: 10px;
         }
-    </script>
+    </style>
 </head>
-<body style="overflow: auto; margin: auto 0">
+<body style="overflow: hidden; margin: auto 0">
 <!--总的框架-->
 <div id="main" style="width: 100%; height: 100%; padding-top: 10px;">
     <div id="left_panel" style="border: thin #eeeeee;border-right-style: solid;">
@@ -54,13 +54,13 @@
         <div>
             <ul id="talk_list" class="social-links">
                 <li onclick="li_click(this)" style="padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;">
-                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px;">userId</h3>
+                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px;">123</h3>
                 </li>
                 <li onclick="li_click(this)" style="padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;">
-                    <h3><img src="static/images/head.jpg" style="width: 30px; height: 30px;">userId</h3>
+                    <h3><img src="static/images/head.jpg" style="width: 30px; height: 30px;">456</h3>
                 </li>
                 <li onclick="li_click(this)" style="padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;">
-                    <h3><img src="static/images/xiaomi3.jpg" style="width: 30px; height: 30px;">userId</h3>
+                    <h3><img src="static/images/xiaomi3.jpg" style="width: 30px; height: 30px;">789</h3>
                 </li>
             </ul>
         </div>
@@ -68,43 +68,68 @@
 
     <!--菜单栏，用于显示信息-->
     <div id="main_panel" style="float: right; width: 80%;">
-        <div id="menu" style="height: 80px">
+        <div id="menu" style="height: 60px">
             <h3 id="sell_name"></h3>
         </div>
         <hr>
         <!--显示对话的面板-->
         <div id="show" style="width: 100%; height: 350px;overflow: auto">
             <div id="content_list" style="padding: 0 50px">
-                <div style="text-align:left; margin-bottom: 10px">
+                <div class="left_div">
                     <div style="float: left">
                         <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">
                     </div>
-                    <div style="text-align: left; max-width: 40%; padding-left: 50px">
-                        <h3>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h3>
+                    <div class="left_font">
+                        <h4>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h4>
                     </div>
                 </div>
-                <div style="text-align:right; margin-bottom: 10px">
+                <div class="right_div">
                     <div style="float: right">
                         <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-left: 20px">
                     </div>
-                    <div style="text-align: right">
-                        <h3>userId</h3>
+                    <div class="right_font">
+                        <h4>啊啊啊啊啊</h4>
                     </div>
                 </div>
-                <div style="text-align:left; margin-bottom: 10px">
-                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">userId</h3>
+                <div class="right_div">
+                    <div style="float: right">
+                        <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-left: 20px">
+                    </div>
+                    <div class="right_font">
+                        <h4>啊啊啊</h4>
+                    </div>
                 </div>
-                <div style="text-align:left; margin-bottom: 10px">
-                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">userId</h3>
+                <div class="left_div">
+                    <div style="float: left">
+                        <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">
+                    </div>
+                    <div class="left_font">
+                        <h4>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h4>
+                    </div>
                 </div>
-                <div style="text-align:right; margin-bottom: 10px">
-                    <h3>userId<img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-left: 20px"></h3>
+                <div class="left_div">
+                    <div style="float: left">
+                        <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">
+                    </div>
+                    <div class="left_font">
+                        <h4>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h4>
+                    </div>
                 </div>
-                <div style="text-align:left; margin-bottom: 10px">
-                    <h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">userId</h3>
+                <div class="left_div">
+                    <div style="float: left">
+                        <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">
+                    </div>
+                    <div class="left_font">
+                        <h4>啊啊啊啊</h4>
+                    </div>
                 </div>
-                <div style="text-align:right; margin-bottom: 10px">
-                    <h3>userId<img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-left: 20px"></h3>
+                <div class="right_div">
+                    <div style="float: right">
+                        <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-left: 20px">
+                    </div>
+                    <div class="right_font">
+                        <h4>啊啊啊啊</h4>
+                    </div>
                 </div>
             </div>
         </div>
@@ -117,6 +142,7 @@
             <input type="hidden" id="toId" value="">
         </div>
         <!--按钮-->
+        <hr>
         <div>
             <div style="float: right; padding-right: 20px">
                 <input type="button" value="test" id="server">
@@ -126,7 +152,44 @@
     </div>
 </div>
 </body>
+<script src="static/jq/jquery-2.1.4.min.js" type="text/javascript"></script>
+<script src="static/jq/webSocket/sock_js.js" type="text/javascript"></script>
+<script src="static/jq/webSocket/stomp.js" type="text/javascript"></script>
+<script src="static/jq/webSocket/update.js" type="text/javascript"></script>
+<script src="static/js/cacheMap.js" type="text/javascript"></script>
 <script src="static/layer/layer.js"></script>
+<script type="text/javascript">
+    var webSocket = null;
+    if ('WebSocket' in window) {
+        //Websocket的连接
+        webSocket = new WebSocket("ws://localhost:8080/webSocket");//WebSocket对应的地址
+    } else if ('MozWebSocket' in window) {
+        //Websocket的连接
+        webSocket = new MozWebSocket("ws://localhost:8080/webSocket");//SockJS对应的地址
+    } else {
+        //SockJS的连接
+        webSocket = new SockJS("ws://localhost:8080/webSocket");    //SockJS对应的地址
+    }
+    webSocket.onmessage = onMessage;
+    webSocket.onerror = onError;
+    webSocket.onopen = onOpen();
+
+    function onOpen() {
+        console.log('webSocket链接打开')
+    }
+
+    function onMessage(response) {
+        console.log(response.data);
+        var msg = $.parseJSON(response.data);
+        addChatListFromServer(msg);
+        //添加图标提示
+        //添加提示音
+        new Audio("static/music/system.mp3").play(); //声音文件地址，支持mp3 或者 ogg
+    }
+
+    function onError() {
+    }
+</script>
 <script>
     $('#server').on('click', function () {
         console.log('test');
