--- a/src/main/webapp/ChangePassword.html
+++ b/src/main/webapp/ChangePassword.html
@@ -198,7 +198,7 @@
                             </tr>
                             <tr>
                                 <td colspan="2">
-                                    <input type="text" style="width: 100%" data-width="100%" id="sPassword" placeholder="请设置您的密码(有6至10位字符组成)" onblur="checkPass()"/>
+                                    <input type="password" style="width: 100%" data-width="100%" id="sPassword" placeholder="请设置您的密码(有6至10位字符组成)" onblur="checkPass()"/>
                                 </td>
                                 <td>
                                     <span id="passCheck"><p style='color:black;font-size: 100%'><strong>+</strong></p></span>
@@ -206,7 +206,7 @@
                             </tr>
                             <tr>
                                 <td  colspan="2">
-                                    <input type="text" style="width: 100%" data-width="100%" id="sPassword_rpt" placeholder="请再次输入您的密码" onblur="checkRpt()"/>
+                                    <input type="password" style="width: 100%" data-width="100%" id="sPassword_rpt" placeholder="请再次输入您的密码" onblur="checkRpt()"/>
                                 </td>
                                 <td>
                                     <span id="rptCheck"><p style='color:black;font-size: 100%'><strong>+</strong></p></span>
