--- a/src/main/webapp/Detail-Order.html
+++ b/src/main/webapp/Detail-Order.html
@@ -60,9 +60,6 @@
                         <li><a href="Refund-Order.html"><span>已退款</span></a></li>
                     </ul>
                 </li>
-                
-				<li><a href="about.html"><span>客服</span></a></li>
-				<li><a href="lookbook.html"><span>数据统计</span></a></li>
             </ul>
 
         </div>
@@ -138,16 +135,16 @@
                             </li>
                             <li><a href="Store.html"><h5>店铺信息</h5></a>
                             </li>
-                            <li><a href="Evaluate.html"><h5>评论管理</h5></a>
+                            <li><a href="seller_evaluation.html"><h5>评论管理</h5></a>
                             </li>
                         </ul>
                     </div>
                     <div class="header-navibox-2">
                         <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
                         <ul class="nav navbar-nav clearfix vcenter">
-                            
+                            <li><a href="sellerService.html"><h5>客服</h5></a></li>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="SellerMessage.html"><h5>个人信息</h5></a>
+                            <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
                             <!-- <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
                                                                          aria-hidden="true"></i></a><span
@@ -158,14 +155,14 @@
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
                             <li><a href="seller_login.html">登 陆</a>
                             </li>
-                            <li><a href="#">退 出</a>
+                            <li><a onclick="exit()">退 出</a>
                             </li>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="home.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
-                            <img class="normal-logo" src="static/wt/images/logo.png" alt="logo">
-                            <img class="scroll-logo hidden-xs" src="static/wt/images/logo.png" alt="logo">
+                            <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
+                            <img class="scroll-logo hidden-xs" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -264,8 +261,8 @@
                                 <div class="col-md-5">
                                     <ul class="footer-list list-unstyled">
                                         <!--关于我们入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link" href="blog1.html">About
-                                            Us</a>
+                                        <li class="footer-list__item"><a href="seller_login.html"
+                                                                         class="footer-list__link">商家入驻</a>
                                         </li>
                                         <li class="footer-list__item"><a class="footer-list__link" href="">Careers</a>
                                         </li>
@@ -301,11 +298,14 @@
             <div class="footer-btm">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="footer-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel
-                            ultrices velit. Etiam pellentesque nibh at quam facilisis, eu maximus dolor tincidunt. Cras
-                            porta luctus pretium. Nam posuere libero a neque rhoncus, eu
-                            viverra mauris volutpat. Integer at venenatis mi. Sed sagittis lobortis gravida. Phasellus
-                            ac finibus sem, et mattis dolor. Vestibulum vitae hendrerit urna, id volutpat magna.
+                        <div class="footer-info">
+                            我们用心服务每一位用户，诚信经营每一件商品，严格的审核商家进驻本平台。<br>
+                            拒绝并抵制假冒伪劣产品的出现与售卖。从自身做起，树立诚信，向假冒伪劣产品宣战，自觉接受相关部门的监督管理和接受广大消费者的监督。
+                            履行经营者的义务，保证所生产经销的商品符合保障人身财产安全的要求和商品应当具有的质量和使用性能；<br>
+                            不掺杂使假、以假充真、以次充好；不生产销售有毒有害、失效、腐烂变质的食品和不合格的食品；<br>
+                            不使用不规范、不合格的计量器具销售商品；不销售应当检验、检疫而未检验、检疫的商品或检验、检疫不合格的商品；
+                            不销售国家明令禁止上市或淘汰的商品；
+                            不作虚假宣传，不误导消费者。
                         </div>
                     </div>
                     <div class="col-md-6 col-md-offset-2">
@@ -355,6 +355,8 @@
 <script src="static/wt/js/main.js"></script>
 <script src="static/js/order_detail.js"></script>
 <script src="static/js/get_param.js"></script>
+<script src="static/js/seller.js"></script>
+<script src="static/js/check.js"></script>
 <script>
     $(function () {
         var oId= getUrlParam('oId');
