--- a/src/main/webapp/seller_login.html
+++ b/src/main/webapp/seller_login.html
@@ -314,7 +314,7 @@
                             			<div class="woocommerce-checkout-review-order">
                                     			<div class="form-row place-order">
                                                     <p>&nbsp;</p>
-                                        			<input type="button" class="button alt" value="注 册 商 家 register" data-value="Place order" onclick="register()" style="line-height:1.3;border:0"/>
+                                        			<input type="button" class="button alt" value="注 册 商 家 register" data-value="Place order" onclick="register()" style="line-height:1.3;border:0;width:450px;float: right;margin-right: 250px"/>
                                     			</div>
                             			</div>
                         			<!--</form>-->
